# opencl-alg-opt

./: CMakeLists.txt  build.sh  cpu_ops.cpp  cpu_ops.h  main.cpp  mat_mul.cl  multiply_many_4x4.cl  ocl_executor.cpp  ocl_executor.h  test_ops.cpp  test_ops.h  transpose.cl
